# Tensor

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: test.yml
Tensor/: Impl.hpp  Slice.hpp  Tensor.hpp  TensorImpl.hpp  TensorUtilities.hpp  View.hpp  main.cpp
apps/Example/: CMakeLists.txt  main.cpp
docs/: user-guide.md
src/: CMakeLists.txt
src/Dispatch/: CMakeLists.txt  Dispatch.hpp  ThreadPool.hpp
src/Dispatch/Internal/: ThreadPool.hpp
src/Expect/: CMakeLists.txt  Expect.hpp
src/Tensor/: CMakeLists.txt  Impl.hpp  Slice.hpp  Tensor.hpp  TensorFwd.hpp  Utilities.hpp  View.hpp
src/Tensor/Containers/: Forward.hpp  Tensor.hpp  Traits.hpp  View.hpp
src/Tensor/Internal/: ITensor.hpp  Print.hpp  Slice.hpp  Tensor.hpp  TensorLike.hpp  Utilities.hpp  View.hpp
src/Tensor/Mixins/: Indexable.hpp  Printable.hpp  Sliceable.hpp
src/Tensor/Utilities/: Copy.hpp  Shape.hpp
tests/: CMakeLists.txt  TestDispatch.cpp  TestTensor.cpp  TestThreadPool.cpp
